src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__inner_attribute.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected literal, identifier, `(`, `[`, `{`, `if`, or `match`, found `#`", span: Span { start: 14, end: 15, start_line: 3, start_col: 5 }, labels: [], suggestions: [], source_file: None, source_content: None }]
