src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__labeled_break_with_value.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 10,
                                                end: 13,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 10,
                                    end: 13,
                                    start_line: 1,
                                    start_col: 11,
                                },
                            },
                        ),
                        span: Span {
                            start: 10,
                            end: 13,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Loop {
                                    label: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 23,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Break {
                                                    label: Some(
                                                        Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 38,
                                                                end: 45,
                                                                start_line: 1,
                                                                start_col: 39,
                                                            },
                                                        },
                                                    ),
                                                    value: Some(
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 42,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 46,
                                                                        end: 48,
                                                                        start_line: 1,
                                                                        start_col: 47,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 46,
                                                                end: 48,
                                                                start_line: 1,
                                                                start_col: 47,
                                                            },
                                                        },
                                                    ),
                                                },
                                                span: Span {
                                                    start: 32,
                                                    end: 48,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 30,
                                            end: 50,
                                            start_line: 1,
                                            start_col: 31,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 25,
                                    end: 50,
                                    start_line: 1,
                                    start_col: 26,
                                },
                            },
                        ),
                        span: Span {
                            start: 14,
                            end: 52,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 52,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 52,
        start_line: 1,
        start_col: 1,
    },
}
