src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__labeled_for.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: For {
                                    label: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 9,
                                                end: 15,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 21,
                                            end: 22,
                                            start_line: 1,
                                            start_col: 22,
                                        },
                                    },
                                    iter: Expr {
                                        kind: Range {
                                            start: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 0,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 26,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 27,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 26,
                                                        end: 27,
                                                        start_line: 1,
                                                        start_col: 27,
                                                    },
                                                },
                                            ),
                                            end: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 29,
                                                                end: 31,
                                                                start_line: 1,
                                                                start_col: 30,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 29,
                                                        end: 31,
                                                        start_line: 1,
                                                        start_col: 30,
                                                    },
                                                },
                                            ),
                                            inclusive: false,
                                        },
                                        span: Span {
                                            start: 26,
                                            end: 31,
                                            start_line: 1,
                                            start_col: 27,
                                        },
                                    },
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: If {
                                                    condition: Expr {
                                                        kind: Binary {
                                                            op: Eq,
                                                            left: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 3,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 37,
                                                                                        end: 38,
                                                                                        start_line: 1,
                                                                                        start_col: 38,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 37,
                                                                            end: 38,
                                                                            start_line: 1,
                                                                            start_col: 38,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 37,
                                                                    end: 38,
                                                                    start_line: 1,
                                                                    start_col: 38,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 5,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 42,
                                                                            end: 43,
                                                                            start_line: 1,
                                                                            start_col: 43,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 42,
                                                                    end: 43,
                                                                    start_line: 1,
                                                                    start_col: 43,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 37,
                                                            end: 43,
                                                            start_line: 1,
                                                            start_col: 38,
                                                        },
                                                    },
                                                    then_branch: Block {
                                                        statements: [],
                                                        expr: Some(
                                                            Expr {
                                                                kind: Break {
                                                                    label: Some(
                                                                        Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 52,
                                                                                end: 58,
                                                                                start_line: 1,
                                                                                start_col: 53,
                                                                            },
                                                                        },
                                                                    ),
                                                                    value: None,
                                                                },
                                                                span: Span {
                                                                    start: 46,
                                                                    end: 58,
                                                                    start_line: 1,
                                                                    start_col: 47,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 44,
                                                            end: 60,
                                                            start_line: 1,
                                                            start_col: 45,
                                                        },
                                                    },
                                                    else_branch: None,
                                                },
                                                span: Span {
                                                    start: 34,
                                                    end: 60,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 32,
                                            end: 62,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 17,
                                    end: 62,
                                    start_line: 1,
                                    start_col: 18,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 64,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 64,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 64,
        start_line: 1,
        start_col: 1,
    },
}
